JENA-714 : Language upgrade
git-svn-id: https://svn.apache.org/repos/asf/jena/trunk@1605034 13f79535-47bb-0310-9956-ffa450edef68